Updates image path index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!--Source: Abolaji Awoyomi -->
         <img alt="Bunjee's Middle School Photo" src="images/timeline2.jpg">
         <!--Source: Abolaji Awoyomi -->
-        <img alt="Bunjee's High School Photo" src="images/timeline3.jpg">
+        <img alt="Bunjee's High School Photo" src="images/timeline3.JPG">
         <!--Source: Abolaji Awoyomi -->
         <img alt="Bunjee's Headshot" src="images/timeline4.jpg">
     </div>
